applied 0 margin and padding to body in index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Nova Shop</title>
     <style>
       @import "tailwindcss";
+      body {
+        margin: 0 !important;
+        padding: 0!important;
+      }
     </style>
   </head>
   <body>
